# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module_output_path = "startup/init"

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
ohos_static_library("libfuzz_utils") {
  sources = [ "utils/fuzz_utils.cpp" ]

  include_dirs = [ "//base/startup/init/test/fuzztest/utils/include" ]

  deps = []
  part_name = "init"
  subsystem_name = "startup"
}

##############################fuzztest##########################################
ohos_fuzztest("DoRebootFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/startup/init/test/fuzztest/doreboot_fuzzer"

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "doreboot_fuzzer/doreboot_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("GetControlFileFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/startup/init/test/fuzztest/getcontrolfile_fuzzer"

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "getcontrolfile_fuzzer/getcontrolfile_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("GetControlSocketFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/startup/init/test/fuzztest/getcontrolsocket_fuzzer"

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//base/startup/init/services/log:init_log",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "getcontrolsocket_fuzzer/getcontrolsocket_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("MountAllFstabFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/startup/init/test/fuzztest/mountallfstab_fuzzer"

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//base/startup/init/interfaces/innerkits/fs_manager:libfsmanager_static",
    "//base/startup/init/test/fuzztest:libfuzz_utils",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "mountallfstab_fuzzer/mountallfstab_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("ReadFileInDirFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/startup/init/test/fuzztest/readfileindir_fuzzer"

  include_dirs = [
    "//base/startup/init/services/init/include",
    "//base/startup/init/services/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "readfileindir_fuzzer/readfileindir_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("ServiceControlStartFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/servicecontrolstart_fuzzer"

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]
  deps = [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "servicecontrolstart_fuzzer/servicecontrolstart_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("ServiceControlStopFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/servicecontrolstop_fuzzer"

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]
  deps = [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "servicecontrolstop_fuzzer/servicecontrolstop_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemDumpParametersFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemdumpparameters_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//base/startup/init/test/fuzztest:libfuzz_utils",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "systemdumpparameters_fuzzer/systemdumpparameters_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemFindParameterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemfindparameter_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "systemfindparameter_fuzzer/systemfindparameter_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemGetParameterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemgetparameter_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "systemgetparameter_fuzzer/systemgetparameter_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemGetParameterCommitIdFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemgetparametercommitid_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "systemgetparametercommitid_fuzzer/systemgetparametercommitid_fuzzer.cpp",
  ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemGetParameterNameFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemgetparametername_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources =
      [ "systemgetparametername_fuzzer/systemgetparametername_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemGetParameterValueFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemgetparametervalue_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources =
      [ "systemgetparametervalue_fuzzer/systemgetparametervalue_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemSetParameterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemsetparameter_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "systemsetparameter_fuzzer/systemsetparameter_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemTraversalParameterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemtraversalparameter_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/services/init/include",
    "//base/startup/init/test/fuzztest/utils/include",
    "//third_party/bounds_checking_function/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//base/startup/init/test/fuzztest:libfuzz_utils",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources =
      [ "systemtraversalparameter_fuzzer/systemtraversalparameter_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemWaitParameterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemwaitparameter_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "systemwaitparameter_fuzzer/systemwaitparameter_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("SystemWatchParameterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/startup/init/test/fuzztest/systemwatchparameter_fuzzer"

  include_dirs = [
    "//base/startup/init/services/include/param",
    "//base/startup/init/services/init/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbeget_proxy",
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "systemwatchparameter_fuzzer/systemwatchparameter_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

ohos_fuzztest("UmountAllFstabFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/startup/init/test/fuzztest/umountallfstab_fuzzer"

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/startup/init/test/fuzztest/utils/include",
  ]

  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//base/startup/init/interfaces/innerkits/fs_manager:libfsmanager_static",
    "//base/startup/init/test/fuzztest:libfuzz_utils",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "umountallfstab_fuzzer/umountallfstab_fuzzer.cpp" ]

  defines = [ "STARTUP_INIT_TEST" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DoRebootFuzzTest",
    ":GetControlFileFuzzTest",
    ":GetControlSocketFuzzTest",
    ":MountAllFstabFuzzTest",
    ":ReadFileInDirFuzzTest",
    ":ServiceControlStartFuzzTest",
    ":ServiceControlStopFuzzTest",
    ":SystemDumpParametersFuzzTest",
    ":SystemFindParameterFuzzTest",
    ":SystemGetParameterCommitIdFuzzTest",
    ":SystemGetParameterFuzzTest",
    ":SystemGetParameterNameFuzzTest",
    ":SystemGetParameterValueFuzzTest",
    ":SystemSetParameterFuzzTest",
    ":SystemTraversalParameterFuzzTest",
    ":SystemWaitParameterFuzzTest",
    ":SystemWatchParameterFuzzTest",
    ":UmountAllFstabFuzzTest",
  ]
}
###############################################################################
