# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init_lite/begetd.gni")
import("//build/ohos.gni")

ohos_shared_library("libparamtestmodule") {
  sources = [ "param_test_module.c" ]

  include_dirs = [
    "//base/startup/init_lite/services/include/param",
    "//base/startup/init_lite/services/include",
    "//base/startup/init_lite/services/init/include",
    "//base/startup/init_lite/services/log",
    "//base/startup/init_lite/interfaces/innerkits/include",
    "//base/startup/init_lite/services/loopevent/include",
    "//base/startup/init_lite/ueventd/include",
    "//third_party/cJSON",
    "//third_party/bounds_checking_function/include",
  ]

  deps = [
    "//base/startup/init_lite/interfaces/innerkits:libbegetutil",
    "//base/startup/init_lite/services/log:agent_log",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  external_deps = [ "init:libinit_module_engine" ]

  part_name = "init"
  module_install_dir = "lib/init"
}

group("paramtestmodule") {
  if (param_test) {
    deps = [ ":libparamtestmodule" ]
  }
}
