# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init_lite/begetd.gni")
import("//build/ohos.gni")

ohos_shared_library("libpluginparamtest") {
  sources = [ "plugin_param_test.c" ]

  include_dirs = [
    "//base/startup/init_lite/services/include/param",
    "//base/startup/init_lite/services/include",
    "//base/startup/init_lite/services/init/include",
    "//base/startup/init_lite/services/log",
    "//base/startup/init_lite/interfaces/innerkits/include",
    "//base/startup/init_lite/services/loopevent/include",
    "//base/startup/init_lite/ueventd/include",
    "//third_party/cJSON",
    "//third_party/bounds_checking_function/include",
  ]

  deps = [
    "//base/startup/init_lite/services/log:agent_log",
    "//base/startup/init_lite/services/utils:libinit_tools",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [ "init:libinit_plugin_engine" ]

  part_name = "init"
  module_install_dir = "lib/plugin"
}

ohos_prebuilt_etc("plugin_param_test.cfg") {
  source = "//base/startup/init_lite/test/plugintest/plugin_param_test.cfg"
  part_name = "init"
  module_install_dir = "etc/plugin"
}

group("pluginparamtest") {
  if (param_test) {
    deps = [
      ":libpluginparamtest",
      ":plugin_param_test.cfg",
    ]
  }
}
